Consistent naming of modules, ex1-service pom.xml partially fixed but still not running
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@131 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex1/ex1-api/pom.xml
+++ b/iGrid/modules/examples/ex1/ex1-api/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex1-api</artifactId>
-    <name>SORCER ex1 :: API</name>
+    <name>SORCER examples :: ex1 :: API</name>
 
     <dependencies>
         <dependency>
