--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
@@ -16,7 +16,7 @@ com.sun.jini.start {
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
-	repo = "${user.home}/.m2/repository/";
+	repo 			 = "${user.home}/.m2/repository/";
 
 	port = Booter.getWebsterPort();
 
@@ -26,26 +26,23 @@ com.sun.jini.start {
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
         SorcerDescriptorUtil.getWebster(policy,
                                          port,
-                                         new String[] { repo
+                                         new String[] { repo,
                                                         jiniLibPath,
                                                         httpData,
                                                         deployPath
-                                                        },
+                                                        }
                                          ),
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl","2.1.7")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"),
+ 			new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")+" ",
             policy,
             ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz","2.1.7"), ps,
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps,
             	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps,
-            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl","2.2.1"), ps,
-            	repo, new ArtifactCoordinates("net.jini","jsk-platform","2.2.1")
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
             }),
-	        sorcer.ex1.provider.WhoIsItProvider1.class.getName(),
-          	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
-        )
+	        "sorcer.ex1.provider.WhoIsItProvider1",
+          	new String[] { "src${/}main${/}resources${/}sorcer${/}whoIsIt-prv.config" }
+        )};
 
 
 }
