--- a/iGrid/modules/examples/ex6/pom.xml
+++ b/iGrid/modules/examples/ex6/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>ex6</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER example 6</name>
+	<name>SORCER examples :: ex6</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
