--- a/iGrid/modules/providers/logger/logger-ui/pom.xml
+++ b/iGrid/modules/providers/logger/logger-ui/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>logger-ui</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER spacer :: logger-ui</name>
+	<name>SORCER providers :: logger :: logger-ui</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
