--- a/iGrid/modules/providers/cataloger/cataloger-ui/pom.xml
+++ b/iGrid/modules/providers/cataloger/cataloger-ui/pom.xml
@@ -8,6 +8,7 @@
         <version>11.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <name>SORCER providers :: cataloger :: cataloger-ui</name>
 
     <artifactId>cataloger-ui</artifactId>
     <dependencies>
