--- a/iGrid/modules/providers/cataloger/pom.xml
+++ b/iGrid/modules/providers/cataloger/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cataloger</artifactId>
+    <name>SORCER providers :: cataloger</name>
     <packaging>pom</packaging>
     <modules>
         <module>cataloger-service</module>
