--- a/iGrid/modules/providers/dbp/dbp-service/pom.xml
+++ b/iGrid/modules/providers/dbp/dbp-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>dbp-service</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER dbp :: dbp-service</name>
+	<name>SORCER providers :: dbp :: dbp-service</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
