--- a/iGrid/modules/providers/dbp/pom.xml
+++ b/iGrid/modules/providers/dbp/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dbp</artifactId>
+    <name>SORCER providers :: dbp</name>
     <packaging>pom</packaging>
     <modules>
 	<module>dbp-service</module>	
