--- a/iGrid/modules/providers/dsp/pom.xml
+++ b/iGrid/modules/providers/dsp/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dsp</artifactId>
+    <name>SORCER providers :: dsp</name>
     <packaging>pom</packaging>
     <modules>
 	<module>dsp-service</module>	
