--- a/iGrid/modules/providers/exertmonitor/pom.xml
+++ b/iGrid/modules/providers/exertmonitor/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>exertmonitor</artifactId>
+    <name>SORCER providers :: exertmonitor</name>
     <packaging>pom</packaging>
     <modules>
 	<module>exertmonitor-service</module>	
