--- a/iGrid/modules/providers/logger/pom.xml
+++ b/iGrid/modules/providers/logger/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>logger</artifactId>
+    <name>SORCER providers :: logger</name>
     <packaging>pom</packaging>
     <modules>
 	<module>logger-service</module>
