--- a/iGrid/modules/providers/spacer/pom.xml
+++ b/iGrid/modules/providers/spacer/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spacer</artifactId>
+    <name>SORCER providers :: spacer</name>
     <packaging>pom</packaging>
     <modules>
 	<module>spacer-service</module>
