--- a/iGrid/modules/providers/spacer/spacer-service/pom.xml
+++ b/iGrid/modules/providers/spacer/spacer-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>spacer-service</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER spacer :: spacer-service</name>
+	<name>SORCER providers :: spacer :: spacer-service</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
