--- a/iGrid/modules/tools/webster/pom.xml
+++ b/iGrid/modules/tools/webster/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>webster</artifactId>
 	<packaging>jar</packaging>
-	<name>SORCER webster</name>
+	<name>SORCER tools :: webster</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
