fix providers extract rio version to variable (poms)
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@134 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/blitz/configs/blitz.config
+++ b/iGrid/bin/blitz/configs/blitz.config
@@ -85,7 +85,7 @@ org.dancres.blitz {
     // Size of the berkeley DB cache
     //
     // dbCache = 33554432;
-    dbCache = 16777216;
+    dbCache = "16777216";
     // dbCache = 8388608;
 
     // Configures the maximum number of concurrent Db transactions
