--- a/iGrid/modules/providers/spacer/spacer-service/src/main/resources/configs/spacer-prv.config
+++ b/iGrid/modules/providers/spacer/spacer-service/src/main/resources/configs/spacer-prv.config
@@ -12,7 +12,7 @@ sorcer.core.provider.ServiceProvider {
     //properties = "../configs/spacer-prv.properties";
     
 	name="Spacer";
-	publishedInterfaces = new Class[] { sorcer.service.Spacer.class, sorcer.service.SpaceStorer.class };
+	publishedInterfaces = new Class[] { sorcer.service.Spacer.class };
 	description = "Spacer";
 	location = "SORCER Lab 20B - CS TTU";
 	entries = new Entry[] {
