--- a/iGrid/modules/examples/ex1/ex1-service/pom.xml
+++ b/iGrid/modules/examples/ex1/ex1-service/pom.xml
@@ -18,7 +18,6 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
@@ -45,7 +44,6 @@
 		<dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
-            <version>5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -57,7 +55,6 @@
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
-            <version>${v.jini}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -65,6 +62,10 @@
             <artifactId>reference-collections</artifactId>
             <version>1.0.1</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
         </dependency>
     </dependencies>
 
