--- a/iGrid/modules/providers/exertmonitor/exertmonitor-service/src/main/resources/configs/exertmonitor-prv.config
+++ b/iGrid/modules/providers/exertmonitor/exertmonitor-service/src/main/resources/configs/exertmonitor-prv.config
@@ -11,8 +11,8 @@ import sorcer.core.provider.exertmonitor.*;
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
     // properties = "../configs/exertmonitor-prv.properties";
-    properties = "${iGrid.home}${/}bin${/}sorcer${/}exertmonitor${/}configs${/}exertmonitor-prv.properties";
-    
+    properties = "/configs/exertmonitor-prv.properties";
+
 	name = "Exert Monitor";
 	publishedInterfaces = new Class[] { sorcer.core.provider.exertmonitor.MonitoringManagement.class };
 	description = "SORCER Exertion Execution Monitoring service";
