--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -15,6 +15,7 @@
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.1.7</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
+        <v.rio>5.0-SNAPSHOT</v.rio>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -32,6 +33,21 @@
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>1.7.4</version>
+            </dependency>
+            <dependency>
+                <groupId>net.jini</groupId>
+                <artifactId>jsk-platform</artifactId>
+                <version>${v.jini}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sorcer-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.rioproject</groupId>
+                <artifactId>rio-platform</artifactId>
+                <version>${v.rio}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
