--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/whoIsIt-prv.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/whoIsIt-prv.config
@@ -19,7 +19,7 @@ sorcer.core.provider.ServiceProvider {
 			
 		// PULL execution related
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };	
-		spaceEnabled = true;
+		spaceEnabled = false;
 		
 		remoteLogging = true;
 		//remoteLgerName =
