--- a/iGrid/modules/examples/ex1/ex1-client/pom.xml
+++ b/iGrid/modules/examples/ex1/ex1-client/pom.xml
@@ -31,4 +31,33 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+
+
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <!--<argument>-Xdebug</argument>
+                        <argument>-Xrunjdwp:transport=dt_socket,server=y,address=8000</argument>-->
+
+                        <argument>-DiGrid.home=${env.IGRID_HOME}</argument>
+                        <argument>-Dsorcer.env.file=${env.IGRID_HOME}/configs/sorcer.env</argument>
+                        <argument>-Djava.util.logging.config.file=${env.IGRID_HOME}/configs/sorcer.logging</argument>
+                        <argument>-Djava.security.policy=${env.IGRID_HOME}/policy/policy.all</argument>
+                        <argument>-classpath</argument><classpath/>
+                        <argument>sorcer.ex1.requestor.WhoIsItBatchTaskRequestor</argument>
+                        <argument>WhoIsIt?</argument>
+                    </arguments>
+
+                    <workingDirectory>${project.root}</workingDirectory>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+
 </project>
