--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
@@ -18,7 +18,7 @@ com.sun.jini.start {
     httpData 		 = home + "${/}data";
 	repo 			 = "${user.home}/.m2/repository/";
 
-	port = Booter.getWebsterPort();
+	port = 0;
 
 
     serviceDescriptors = new ServiceDescriptor[] {
@@ -33,7 +33,7 @@ com.sun.jini.start {
                                                         }
                                          ),
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")+" ",
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"),
             policy,
             ConfigUtil.concat(new Object[] {
             	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps,
@@ -41,8 +41,23 @@ com.sun.jini.start {
             	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
             }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
-          	new String[] { "src${/}main${/}resources${/}sorcer${/}whoIsIt-prv.config" }
-        )};
+          	new String[] { "src/main/resources/META-INF/sorcer${/}whoIsIt-prv.config" }
+        ),
+
+        new SorcerServiceDescriptor(
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"),
+            policy,
+            ConfigUtil.concat(new Object[] {
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps,
+            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
+            }),
+	        "sorcer.ex1.provider.WhoIsItProvider1",
+          	new String[] { "src/main/resources/META-INF/sorcer${/}whoIsIt-prv.config" }
+        ),
+
+
+        };
 
 
 }
