--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -15,7 +15,7 @@
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.1.7</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
-        <v.rio>5.0-SNAPSHOT</v.rio>
+        <v.rio>5.0-M2</v.rio>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
