upgrade groovy ex1 - WIP
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@139 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
@@ -33,7 +33,8 @@ com.sun.jini.start {
                                                         }
                                          ),
         new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"),
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
             policy,
             ConfigUtil.concat(new Object[] {
             	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps,
@@ -42,22 +43,8 @@ com.sun.jini.start {
             }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
           	new String[] { "src/main/resources/META-INF/sorcer${/}whoIsIt-prv.config" }
-        ),
-
-        new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"),
-            policy,
-            ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps,
-            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
-            }),
-	        "sorcer.ex1.provider.WhoIsItProvider1",
-          	new String[] { "src/main/resources/META-INF/sorcer${/}whoIsIt-prv.config" }
-        ),
-
-
-        };
+        )
+    };
 
 
 }
