Added tools\dependcies module to force maven to download libs needed at runtime
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@140 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -23,5 +23,6 @@
 		<module>shell</module>
 		<module>ssb</module>
 		<module>sorcer-provider</module>
+		<module>dependencies</module>
 	</modules>
 </project>
