--- a/iGrid/modules/client-common/pom.xml
+++ b/iGrid/modules/client-common/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>webster</artifactId>
+			<version>${project.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
