start sorcer with mvn exec:exec -Dconfig=someFile.config, using min-boot-http as a default
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@146 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
@@ -44,7 +44,7 @@ com.sun.jini.start {
             //	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
             }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}whoIsIt-prv.config" }
+          	new String[] { home + "/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/whoIsIt-prv.config" }
         )
     };
 
