--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -3,6 +3,7 @@
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <version>11.1</version>
@@ -14,6 +15,10 @@
     <name>SORCER booter</name>
     <description>SORCER</description>
     <url>http://sorcersoft.org/</url>
+
+    <properties>
+        <config>${env.IGRID_HOME}/configs/boot-iGrid-min-http.config</config>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -94,13 +99,23 @@
 						<argument>-classpath</argument>
                         <classpath/>
                         <argument>com.sun.jini.start.ServiceStarter</argument>
-                        <argument>../../../configs/boot-iGrid-min-http.config</argument>
+                        <argument>${config}</argument>
                     </arguments>
 
                     <workingDirectory>${project.root}</workingDirectory>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
