Moved sorcer to sorcer-extra, added sorcer-util. Fixed shell and example 6
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@148 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/pom.xml
+++ b/iGrid/modules/pom.xml
@@ -17,12 +17,12 @@
 	<url>http://sorcersoft.org/</url>
 
 	<modules>
-		<module>sorcer</module>
-		<module>tools</module>
-		<module>examples</module>
-		<module>util</module>
+	<module>tools</module>
+	<module>examples</module>
+	<module>util</module>
         <module>providers</module>
         <module>sorcer-api</module>
+	<module>sorcer-util</module>
         <module>exertlet-ui</module>
         <module>client-common</module>
     </modules>
